Fixing alignment issues

--- a/templates/static/css/app.css
+++ b/templates/static/css/app.css
@@ -86,7 +86,7 @@ ul {
   background-color: #353c4b;
   border-radius: 1rem;
   /*margin-top: 1rem;*/
-  margin: 1rem 0.5rem;
+  margin: auto;
   padding: 1.5rem;
   text-align: left;
 }
